# ecs-survivors

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  baseline-no-physics  baseline-no-physics.csv  box2d  box2d.csv  collision-entity  collision-entity.csv  collision-relationship  collision-relationship.csv  data.csv  record-list  record-list.csv  spatial-hash-rebuilding  spatial-hash-rebuilding.csv
app/: CMakeLists.txt  main.cpp
apps/: CMakeLists.txt  main.cpp
apps/ecs-survivors/: CMakeLists.txt  game.cpp  game.h  game_scene.h  main.cpp
apps/ecs-survivors/modules/ai/: ai_module.cpp  ai_module.h
apps/ecs-survivors/modules/ai/systems/: stop_when_arrived_at_target_system.h
apps/ecs-survivors/modules/debug/: CMakeLists.txt  debug_module.cpp  debug_module.h
apps/ecs-survivors/modules/debug/systems/: debug_closest_enemy_to_player_system.h  debug_collidable_entities_system.h  debug_colliders_system.h  debug_entity_count_system.h  debug_grid_system.h  debug_mouse_position_system.h
apps/ecs-survivors/modules/gameplay/: gameplay_module.cpp  gameplay_module.h
apps/ecs-survivors/modules/player/: player_module.cpp
apps/headless/: CMakeLists.txt  headless_app.cpp  main.cpp
apps/headless-app/: CMakeLists.txt  headless_app.h
apps/level-editor/: CMakeLists.txt  editor.cpp  editor.h  game_scene.h  main.cpp
modules/ecs-survivors/player/: CMakeLists.txt
modules/ecs-survivors/player/src/: player_module.cpp
modules/gui/: CMakeLists.txt
modules/gui/include/gui/: components.h  gui_module.h
modules/gui/src/: gui_module.cpp
modules/rendering/: CMakeLists.txt
modules/rendering/include/rendering/: components.h  rendering_module.h
modules/rendering/src/: rendering_module.cpp
modules/tilemap/: CMakeLists.txt
modules/tilemap/include/tilemap/: tilemap_module.h
src/: CMakeLists.txt  game.cpp  game.h
src/base/: CMakeLists.txt
src/base/include/base/: base_module.h
src/core/: CMakeLists.txt
src/core/include/core/: application.h  components.h  core_module.h  logger.h  scene.h
src/core/src/: core_module.cpp  logger.cpp
src/ecs-survivors/: CMakeLists.txt
src/ecs-survivors/ai/: CMakeLists.txt
src/ecs-survivors/ai/src/: ai_module.cpp
src/ecs-survivors/debugging/: CMakeLists.txt
src/ecs-survivors/debugging/src/: debug_module.cpp
src/ecs-survivors/gameplay/: CMakeLists.txt
src/ecs-survivors/gameplay/src/: gameplay_module.cpp
src/editor/: CMakeLists.txt
src/editor/include/editor/: asset_browser.h  components.h  pipeline_steps.h
src/editor/src/: asset_browser.cpp  editor_module.cpp  imgui_utils.cpp
src/gui/: CMakeLists.txt
src/gui/include/gui/: components.h  prefabs.h
src/gui/src/: gui_module.cpp
src/input/: CMakeLists.txt
src/modules/: CMakeLists.txt  base_module.h  module.h
src/modules/ai/: CMakeLists.txt  ai_module.cpp  ai_module.h  components.h
src/modules/ai/systems/: CMakeLists.txt  follow_target_system.h  stop_when_arrived_at_target_system.h
src/modules/analytics/: CMakeLists.txt  analytics_module.cpp  analytics_module.h  components.h
src/modules/core/: CMakeLists.txt  components.h  core_module.cpp  core_module.h
src/modules/debug/: CMakeLists.txt  components.h  debug_module.cpp  debug_module.h
src/modules/debug/systems/: CMakeLists.txt  debug_closest_enemy_to_player_system.h  debug_collidable_entities_system.h  debug_colliders_system.h  debug_entity_count_system.h  debug_fps_system.h  debug_grid_system.h  debug_mouse_position_system.h
src/modules/engine/: CMakeLists.txt
src/modules/engine/core/: CMakeLists.txt  components.h  core_module.cpp  core_module.h
src/modules/engine/input/: CMakeLists.txt  components.h  input_module.cpp  input_module.h
src/modules/engine/physics/: CMakeLists.txt  base_spatial_hash.h  components.h  physics_module.cpp  physics_module.h  pipeline_steps.h  queries.h  spatial_hash_rebuilding.h  spatial_hash_updating.h
src/modules/engine/rendering/: CMakeLists.txt  components.h  pipeline_steps.h  queries.h  rendering_module.cpp  rendering_module.h
src/modules/gameplay/: CMakeLists.txt  components.h  gameplay_module.cpp  gameplay_module.h  pipeline_steps.h
src/modules/gameplay/systems/: CMakeLists.txt  add_bounce_system.h  add_chain_system.h  add_multiproj_system.h  add_pierce_system.h  add_split_system.h  create_health_bar_system.h  deal_damage_on_collision_system.h  decrement_bounce_system.h  decrement_chain_system.h  decrement_multiproj_system.h  decrement_pierce_system.h  fire_projectile_system.h  give_experience_system.h  increment_bounce_system.h  increment_chain_system.h  increment_multiproj_system.h  increment_pierce_system.h  projectile_bounce_collided_system.h  projectile_chain_collided_system.h  projectile_no_bounce_collided_system.h  projectile_no_effect_collided_system.h  projectile_pierce_collided_system.h  projectile_split_collision_system.h  regen_health_system.h  remove_bounce_system.h  remove_chain_system.h  remove_multproj_system.h  remove_pierce_system.h  remove_split_system.h  restart_cooldown_system.h  spawn_enemies_around_screen_system.h  take_damage_system.h  update_cooldown_system.h  update_health_bar_system.h
src/modules/input/: components.h  input_module.cpp
src/modules/physics/: components.h  physics_module.cpp  physics_module.h
src/modules/player/: CMakeLists.txt  components.h  player_module.cpp  player_module.h
src/modules/player/systems/: CMakeLists.txt  scale_desired_velocity_system.h  translate_horizontal_input_to_desired_vel_system.h  translate_vertical_input_to_desired_vel_system.h
src/modules/tilemap/: CMakeLists.txt  components.h  tilemap_module.cpp  tilemap_module.h
src/modules/tilemap/systems/: CMakeLists.txt  create_tilemap_system.h  draw_tilemap_layer_tiles_system.h
src/physics/: CMakeLists.txt
src/physics/include/physics/: components.h  pipeline_steps.h
src/physics/src/: physics_module.cpp
src/rendering/: CMakeLists.txt
src/rendering/include/rendering/: components.h  pipeline_steps.h  queries.h
src/rendering/src/: rendering_module.cpp
src/tilemap/src/: tilemap_module.cpp
(+247 files in other folders)
